syntax = "proto3";
package poset;
import "github.com/andrecronje/lachesis/src/peers/peer_set.proto";

enum Trilean {
  UNDEFINED = 0;
  TRUE = 1;
  FALSE = 2;
}

message RoundEvent {
  bool Consensus = 1;
  bool Witness = 2;
  Trilean Famous = 3;
}

message RoundInfoMessage {
  map<string, RoundEvent> CreatedEvents = 1;
  repeated string         ReceivedEvents = 2;
  peers.PeerSet           PeerSet = 3;
}
